Wed Apr 18 10:23:00 UTC 2007  Ian Roberts  <ir@prismtech.com>

        * tao/Valuetype/Valuetype_Adapter_Impl:
          Fix for Bug 2791, resolving a memory leak when
          unregistering a value factory.
        
        * tests/Bug_2791_Regression/*:
          New regression test to cover Bug 2791.
        
Wed Apr 18 10:20:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/FoxResource.mpc:
        * tao/FoxResource/*:
          New Fox Toolkit support library. Thanks to
          Dmitriy Nikitinskiy <nick at bel dot ru> for providing these
          files. This fixes bugzilla 1400.

Tue Apr 17 16:05:50 UTC 2007 Yan Dai  <dai_y@ociweb.com>

        * tao/DynamicAny/DynEnum_i.cpp:

          Use .in() on the var to avoid warnings from some
          platforms.

Tue Apr 17 14:29:52 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl:

          Increased the timeouts for slower machines.

Tue Apr 17 13:53:03 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2702_Regression/run_test.pl:

          Remove a portion of the path to perl when running on VMS.

Tue Apr 17 13:41:49 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * performance-tests/Cubit/TAO/MT_Cubit/Globals.cpp:

          Use ACE_SCOPE_THREAD on BSD instead of ACE_SCOPE_PROCESS. It's
          not supported.

Tue Apr 17 13:20:14 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/ImplRepo/Bug_689_Regression/run_test.pl:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Application_Controlled/run_test.pl:
        * orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/run_test.pl:

          Added missing kill's for when things go wrong.

Tue Apr 17 13:17:12 UTC 2007 Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2768_Regression/server.cpp:
          Use orb->run

        * tao/LocateRequest_Invocation.h:
          Use public inheritance
