@@ -2,7 +2,7 @@ eval '(exit $?0)' && eval 'exec perl -S $0 ${1+"$@"}'
     & eval 'exec perl -S $0 $argv:q'
     if 0;
 
-# $Id:$
+# $Id$
 # -*- perl -*-
 
 use lib "$ENV{ACE_ROOT}/bin";
@@ -10,14 +10,14 @@ use PerlACE::Run_Test;
 
 $status = 0;
 
-#if (PerlACE::is_vxworks_test()) {
-#    $CL = new PerlACE::ProcessVX ("client", "");
-#}
-#else {
+if (PerlACE::is_vxworks_test()) {
+    $CL = new PerlACE::ProcessVX ("client", "");
+}
+else {
     $CL = new PerlACE::Process ("client", "");
 #}
 
-$client = $CL->SpawnWaitKill (300);
+$client = $CL->SpawnWaitKill ($PerlACE::wait_interval_for_process_creation);
 
 if ($client != 0) {
     print STDERR "ERROR: client returned $client\n";
